# aws-serverless-deep-learning-suggestions

./: .gitignore  CHANGELOG.md  README.md  THIRD-PARTY-LICENSES  pyproject.toml
docs/: DEPLOYMENT.md  architecture.drawio
sam/: template.yaml
sam/get_reports/: app.py  pyproject.toml  requirements.txt
sam/get_submission/: app.py  pyproject.toml  requirements.txt
sam/get_submissions/: app.py  pyproject.toml  requirements.txt
sam/patch_submission/: app.py  pyproject.toml  requirements.txt
sam/process_upload/: app.py  pyproject.toml  requirements.txt
sam/seed_ddb_data/: app.py  initial_data.json  pyproject.toml  requirements.txt
sam/seed_s3_data/: app.py  pyproject.toml  requirements.txt
sam/tests/: pyproject.toml  requirements.txt
sam/tests/unit/: test_get_reports.py  test_get_submission.py  test_get_submissions.py  test_patch_submission.py  test_process_upload.py  test_seed_ddb_data.py  test_seed_s3_data.py
website/: index.html  reports.html
website/css/: main.css
website/js/: config.js  map.js  submit.js
