[tool.poetry]
name = "aws-serverless-deep-learning-suggestions"
version = "0.1.0"
description = ""
authors = ["Caesar Kabalan <ckabalan@amazon.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
