[tool.poetry]
name = "dl_suggestion_blog_process_upload"
version = "0.1.0"
description = ""
authors = ["Caesar Kabalan <ckabalan@amazon.com>"]
license = "MIT-0"

[tool.poetry.dependencies]
python = "~3.11"
boto3 = "^1.28.65"
loguru = "^0.7.2"
Pillow = "^10.1.0"
simplejson = "^3.19.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
