[tool.poetry]
name = "dl_suggestion_blog_tests"
version = "0.1.0"
description = ""
authors = ["Caesar Kabalan <ckabalan@amazon.com>"]
license = "MIT-0"

[tool.poetry.dependencies]
python = "~3.9"
boto3 = "^1.24.66"
Pillow = "^10.0.1"
crhelper = "^2.0.11"
loguru = "^0.6.0"
simplejson = "^3.17.6"
pytest = "^7.1.3"
moto = "^4.0.1"
coverage = "^6.4.4"
openapi-spec-validator = "~0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
