[tool.poetry]
name = "dl_suggestion_blog_tests"
version = "0.1.0"
description = ""
authors = ["Caesar Kabalan <ckabalan@amazon.com>"]
license = "MIT-0"

[tool.poetry.dependencies]
python = "~3.11"
boto3 = "^1.28.65"
Pillow = "^10.1.0"
crhelper = "^2.0.11"
loguru = "^0.7.2"
simplejson = "^3.19.2"
pytest = "^7.4.2"
moto = "^4.2.6"
coverage = "^7.3.2"
openapi-spec-validator = "~0.7.1"
setuptools = "~68.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
